# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import dashboardRouter from "./dashboard";
+import participantsRouter from "./participants";
+import requestsRouter from "./requests";
+import providersRouter from "./providers";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(dashboardRouter);
+router.use(participantsRouter);
+router.use(requestsRouter);
+router.use(providersRouter);
 
 export default router;
